--- a/src/templates/image-card.hbs
+++ b/src/templates/image-card.hbs
@@ -1,7 +1,7 @@
 {{#each this}}
   <li>
     <div class='photo-card'>
-      <img src='{{webformatURL}}' alt='' />
+      <img src='{{webformatURL}}' alt='' class='photo-card-image' data-src='{{largeImageURL}}' />
 
       <div class='stats'>
         <p class='stats-item'>
